# KPP-VST3

./: CMakeLists.txt  README.md
kpp_bluedream/: CMakeLists.txt
kpp_bluedream/include/: plugids.h  plugprocessor.h  version.h
kpp_bluedream/resource/: plug.uidesc
kpp_bluedream/source/: plugcontroller.cpp  plugprocessor.cpp
kpp_deadgate/: CMakeLists.txt
kpp_deadgate/include/: faust-support.h  plugids.h  plugprocessor.h  version.h
kpp_deadgate/source/: plugcontroller.cpp  plugprocessor.cpp
kpp_distruction/: CMakeLists.txt
kpp_distruction/include/: faust-support.h  plugids.h  plugprocessor.h  version.h
kpp_distruction/resource/: plug.uidesc
kpp_distruction/source/: plugcontroller.cpp  plugprocessor.cpp
kpp_fuzz/: CMakeLists.txt
kpp_fuzz/include/: faust-support.h  plugcontroller.h  plugids.h  plugprocessor.h  version.h
kpp_fuzz/resource/: plug.uidesc
kpp_fuzz/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
kpp_octaver/: CMakeLists.txt
kpp_octaver/include/: faust-support.h  plugcontroller.h  plugids.h  plugprocessor.h  version.h
kpp_octaver/resource/: Info.plist
kpp_octaver/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
kpp_single2humbucker/: CMakeLists.txt
kpp_single2humbucker/include/: faust-support.h  plugcontroller.h  plugids.h  plugprocessor.h  version.h
kpp_single2humbucker/source/: plugcontroller.cpp  plugprocessor.cpp
kpp_tubeamp/: CMakeLists.txt
kpp_tubeamp/include/: faust-support.h  kpp_tubeamp.h  plugcontroller.h  plugids.h  plugprocessor.h  pluguimessagecontroller.h  version.h
kpp_tubeamp/resource/: plug.uidesc
kpp_tubeamp/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
